test/should-fail/vsgc1629One.f3
/**
 * @subtest
 */

package class vsgc1629One {

  public-read var twub = 333;

  function make() : vsgc1629One {
     twub = 444; // OK
     vsgc1629One {twub: 111} // OK
  }
}
